INTYGFV-16525: Set to use nvd mirror for dependencycheck. Required gradle update. Performed general version update and some sonar cleaning.